dedicated shortcode(in progress)

--- a/src/main/webapp/rightnav.xhtml
+++ b/src/main/webapp/rightnav.xhtml
@@ -125,8 +125,8 @@
                                      background-position: left;
                                      padding-left: 20px;" />
                     </p:submenu>
-                    <p:submenu label="Shared Shortcode" expanded="true" style="display:#{userScroller.show()}">
-                        <p:menuitem  value="Manage Sharedshortcode" actionListener="#{userInfo.viewsharedshortcode()}"  ajax="false"
+                    <p:submenu label="Manage Shortcode" expanded="true" style="display:#{userScroller.show()}">
+                        <p:menuitem  value="Sharedshortcode" actionListener="#{userInfo.viewsharedshortcode()}"  ajax="false"
                                      style="background-image: url('#{resource['images/managecallback.png']}');
                                      background-size: 1rem 1rem;
                                      background-repeat: no-repeat;
