--- a/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
@@ -96,6 +96,7 @@
                 </p:panel>
 
                 <!-- Create Shortcode Dialog -->
+                <!-- Create Shortcode Dialog -->
                 <p:dialog header="Create New Shortcode" widgetVar="createShortcodeDialog" modal="true" width="700">
                     <h:form id="createShortcodeForm">
                         <p:panelGrid columns="2">
