--- a/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
@@ -100,7 +100,7 @@
                     <h:form id="createShortcodeForm">
                         <p:panelGrid columns="2">
                             <p:outputLabel for="user" value="User"/>
-                            <p:selectOneMenu id="user" value="#{dedicatedShortcodeController.username}" filter="true">
+                            <p:selectOneMenu id="user" value="#{dedicatedShortcodeController.username}" filter="true" required="true">
                                 <f:selectItem itemLabel="Select User" itemValue=""/>
                                 <f:selectItems value="#{sMSOut.data}" />
                             </p:selectOneMenu>
