User required in create new shared shortcode

--- a/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
@@ -27,7 +27,7 @@
 
             <p:growl id="msgs" showDetail="true" life="3000"/>
             <div align="center">
-                <p:panel id="maintab" header="AVAILABLE SHORTCODES (Dedicated Only)">
+                <p:panel id="maintab" header="AVAILABLE SHORTCODES (DEDICATED)">
                     <h:form id="shortcodesForm">
                         <p:commandButton value="Create New Shortcode" 
                                          actionListener="#{dedicatedShortcodeController.prepareNewShortcode}"
