--- a/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
@@ -112,7 +112,7 @@
                             <p:inputText id="shortcode" value="#{dedicatedShortcodeController.newShortcode.shortcode}" required="true"/>
 
                             <p:outputLabel for="callbackUrl" value="Callback URL"/>
-                            <p:inputText id="callbackUrl" value="#{dedicatedShortcodeController.newShortcode.callbackUrl}" required="false"/>
+                            <p:inputTextarea id="callbackUrl" value="#{dedicatedShortcodeController.newShortcode.callbackUrl}" required="false"/>
 
                             <p:outputLabel for="status" value="Status"/>
                             <p:selectOneMenu id="status" value="#{dedicatedShortcodeController.newShortcode.status}">
