--- a/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/dedicatedshortcode.xhtml
@@ -152,7 +152,7 @@
                             <p:inputText value="#{dedicatedShortcodeController.currentShortcode.shortcode}" readonly="true"/>
 
                             <p:outputLabel value="Callback URL"/>
-                            <p:inputText value="#{dedicatedShortcodeController.currentShortcode.callbackUrl}"/>
+                            <p:inputTextarea value="#{dedicatedShortcodeController.currentShortcode.callbackUrl}"/>
 
                             <p:outputLabel value="Status"/>
                             <p:selectOneMenu value="#{dedicatedShortcodeController.currentShortcode.status}">
