--- a/src/main/webapp/clientmanager/sharedshortcode/managesharedshortcode.xhtml
+++ b/src/main/webapp/clientmanager/sharedshortcode/managesharedshortcode.xhtml
@@ -152,7 +152,7 @@
                             <p:inputText value="#{shortcodeController.currentShortcode.shortcode}" readonly="true"/>
 
                             <p:outputLabel value="Callback URL"/>
-                            <p:inputText value="#{shortcodeController.currentShortcode.callbackUrl}"/>
+                            <p:inputTextarea value="#{shortcodeController.currentShortcode.callbackUrl}"/>
 
                             <p:outputLabel value="Status"/>
                             <p:selectOneMenu value="#{shortcodeController.currentShortcode.status}">
